<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_vesc_drv</name>
  <version>0.0.1</version>
  <description>Provides basic ROS2 implementation of VESC driver. Designed for differential drive application - expects 2 controllers to be available with one chained to another over CAN. The VESC master is controled via serial (USB).</description>
  <maintainer email="viktor@vik.works">Viktor Kravchenko</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
